--- a/panel/public/crontab.html
+++ b/panel/public/crontab.html
@@ -42,6 +42,12 @@
     </div>
     <script>
         $(document).ready(function () {
+            let timeStamp = (new Date()).getTime()
+            $.get("./checkAuthState?t="+timeStamp, function (data) {
+                if(data.err == 1){
+                    $("nav").after("<div id='notice'><span>"+data.msg+"</span></div>");
+                }
+            });
             var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
                 lineNumbers: true,
                 lineWrapping: true,
