--- a/panel/public/auth.html
+++ b/panel/public/auth.html
@@ -22,6 +22,14 @@
 	</div>
 
 	<script>
+    $(document).ready(function () {
+      let timeStamp = (new Date()).getTime()
+      $.get("./checkAuthState?t="+timeStamp, function (data) {
+          if(data.err == 1){
+              $("nav").after("<div id='notice'><span>"+data.msg+"</span></div>");
+          }
+      })
+    });
 		$("#login").click(function () {
 			let timeStamp = (new Date()).getTime()
 			$user = $(".username").val();
